--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rajat Gupta | Data Scientist</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="hero">
-    <img src="assets/profile.png" alt="Profile" class="profile-pic" />
-    <h1>Rajat Gupta</h1>
-    <h2>I am a <span id="animated-text">Data Scientist</span></h2>
-    <div class="buttons">
-      <a href="#projects" class="btn">View My Work</a>
-      <a href="#contact" class="btn-outline">Get In Touch</a>
-    </div>
-  </header>
-
   <nav class="navbar">
-    <a href="#">Home</a>
-    <a href="#projects">Projects</a>
-    <a href="assets/resume.pdf" target="_blank">Resume</a>
-    <a href="#contact">Contact</a>
+    <div class="nav-brand">RG</div>
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#projects">Projects</a>
+      <a href="assets/RAJAT-CV.pdf" target="_blank">Resume</a>
+      <a href="#contact">Contact</a>
+    </div>
   </nav>
+
+  <section class="hero">
+    <div class="hero-left">
+      <img src="assets/profile.png" alt="Rajat Gupta" class="hero-image" />
+    </div>
+    <div class="hero-right">
+      <h1>Rajat Gupta</h1>
+      <h2><span id="animated-text">Data Scientist</span></h2>
+      <p class="tagline">Building intelligent systems and solving real-world problems with machine learning.</p>
+      <div class="buttons">
+        <a href="#projects" class="btn">View My Work</a>
+        <a href="#contact" class="btn-outline">Get In Touch</a>
+      </div>
+    </div>
+  </section>
 
   <main>
     <section id="projects">
