--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="nav-brand">RG</div>
+    <div class="logo">RG</div>
     <div class="nav-links">
       <a href="#">Home</a>
       <a href="#projects">Projects</a>
-      <a href="assets/RAJAT-CV.pdf" target="_blank">Resume</a>
+      <a href="assets/resume.pdf" target="_blank">Resume</a>
       <a href="#contact">Contact</a>
     </div>
   </nav>
 
-  <section class="hero">
-    <div class="hero-left">
-      <img src="assets/profile.png" alt="Rajat Gupta" class="hero-image" />
+  <header class="hero">
+    <div class="left">
+      <img src="assets/profile.png" alt="Rajat Gupta" class="hero-img">
     </div>
-    <div class="hero-right">
+    <div class="right">
       <h1>Rajat Gupta</h1>
       <h2><span id="animated-text">Data Scientist</span></h2>
-      <p class="tagline">Building intelligent systems and solving real-world problems with machine learning.</p>
-      <div class="buttons">
+      <p>Building intelligent systems and solving real-world problems with machine learning.</p>
+      <div class="hero-buttons">
         <a href="#projects" class="btn">View My Work</a>
         <a href="#contact" class="btn-outline">Get In Touch</a>
       </div>
     </div>
-  </section>
+  </header>
 
   <main>
     <section id="projects">
