--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
     </div>
   </nav>
 
-  <header class="hero">
-    <div class="left">
-      <img src="assets/profile.png" alt="Rajat Gupta" class="hero-img">
-    </div>
-    <div class="right">
+  <section class="hero">
+    <div class="hero-image"></div>
+    <div class="hero-text">
       <h1>Rajat Gupta</h1>
       <h2><span id="animated-text">Data Scientist</span></h2>
       <p>Building intelligent systems and solving real-world problems with machine learning.</p>
-      <div class="hero-buttons">
+      <div class="buttons">
         <a href="#projects" class="btn">View My Work</a>
         <a href="#contact" class="btn-outline">Get In Touch</a>
       </div>
     </div>
-  </header>
+  </section>
 
   <main>
     <section id="projects">
@@ -40,21 +38,3 @@
         <li><strong>GitHub Anomaly Detection</strong>: Real-time anomaly detection using Isolation Forest, Airflow, MLflow, and Streamlit Dashboards.</li>
         <li><strong>Model Compression for FPGA</strong>: Distilled deep learning models to decision trees for real-time hardware use.</li>
         <li><strong>Physics Event Classifier</strong>: ML model for rare signal detection in high-noise LHC datasets.</li>
-      </ul>
-    </section>
-
-    <section id="contact">
-      <h3>Contact</h3>
-      <p>Email: <a href="mailto:rajatgupta116@gmail.com">rajatgupta116@gmail.com</a></p>
-      <p>GitHub: <a href="https://github.com/rajat116" target="_blank">github.com/rajat116</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/dr-rajat-gupta-a4a77391/" target="_blank">linkedin.com/in/dr-rajat-gupta</a></p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Rajat Gupta</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
