--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   </nav>
 
   <section class="hero">
-    <div class="hero-image"></div>
+    <div class="hero-image">
+      <img src="assets/portfolio.png" alt="Rajat Gupta" />
+    </div>
     <div class="hero-text">
       <h1>Rajat Gupta</h1>
       <h2><span id="animated-text">Data Scientist</span></h2>
@@ -38,3 +40,14 @@
         <li><strong>GitHub Anomaly Detection</strong>: Real-time anomaly detection using Isolation Forest, Airflow, MLflow, and Streamlit Dashboards.</li>
         <li><strong>Model Compression for FPGA</strong>: Distilled deep learning models to decision trees for real-time hardware use.</li>
         <li><strong>Physics Event Classifier</strong>: ML model for rare signal detection in high-noise LHC datasets.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 Rajat Gupta. All rights reserved.
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
