--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section class="hero">
     <div class="hero-image">
-      <img src="assets/portfolio.png" alt="Rajat Gupta" />
+      <img src="assets/portfolioo.png" alt="Rajat Gupta" />
     </div>
     <div class="hero-text">
       <h1>Rajat Gupta</h1>
