--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rajat Gupta | Data Scientist</title>
+  <title>Rajat Gupta | ML Engineer</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar">
@@ -24,7 +24,7 @@
     </div>
     <div class="hero-text">
       <h1>Rajat Gupta</h1>
-      <h2><span id="animated-text">Data Scientist</span></h2>
+      <h2><span id="animated-text">ML Engineer</span></h2>
       <p>Building intelligent systems and solving real-world problems with machine learning.</p>
       <div class="buttons">
         <a href="#projects" class="btn">View My Work</a>
