--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>Rajat Gupta | ML Engineer</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 <body>
   <nav class="navbar">
     <div class="logo">RG</div>
     <div class="nav-links">
-      <a href="#">Home</a>
+      <a href="#" class="nav-home">Home</a>
       <a href="#projects">Projects</a>
+      <a href="#about">About</a> 
       <a href="assets/resume.pdf" target="_blank">Resume</a>
       <a href="#contact">Contact</a>
     </div>
@@ -33,21 +35,135 @@
     </div>
   </section>
 
-  <main>
-    <section id="projects">
-      <h3>Projects</h3>
-      <ul>
-        <li><strong>GitHub Anomaly Detection</strong>: Real-time anomaly detection using Isolation Forest, Airflow, MLflow, and Streamlit Dashboards.</li>
-        <li><strong>Model Compression for FPGA</strong>: Distilled deep learning models to decision trees for real-time hardware use.</li>
-        <li><strong>Physics Event Classifier</strong>: ML model for rare signal detection in high-noise LHC datasets.</li>
-      </ul>
-    </section>
-  </main>
+  <section id="featured-projects" class="projects-section">
+    <h2 class="section-title">Featured Projects</h2>
+    <p class="section-subtitle">Check out some of my recent work.</p>
 
-  <footer>
-    &copy; 2025 Rajat Gupta. All rights reserved.
+    <div class="projects-grid">
+      <a href="project-github-anomaly.html" class="project-card" data-aos="fade-up">
+        <img src="assets/banner.png" alt="GitHub Anomaly Detection" />
+        <div class="project-info">
+          <span class="tag">MLOps</span>
+          <h4>GitHub Anomaly Detection</h4>
+          <p>Real-time anomaly detection system using Airflow, MLflow, and Streamlit.</p>
+        </div>
+      </a>
+    </div>
+
+    <a href="projects.html" class="btn-outline view-all">View All Projects →</a>
+  </section>
+
+  <section id="about" class="about-section" data-aos="fade-up">
+    <h2 class="section-title">About Me</h2>
+    <div class="about-grid">
+      
+      <!-- My Journey -->
+      <div class="about-left">
+        <h3 class="about-heading">My Journey</h3>
+        <p>
+          From my early days as a Computer Engineering student to a curious ML engineer, I’ve always been driven by a passion for solving real-world problems through technology.
+        </p>
+        <p>
+          I've worked on everything from image recognition to real-time system monitoring, and I continue learning and building with tools that push the boundaries of what AI can do.
+        </p>
+      </div>
+
+      <!-- Skills & Education -->
+      <div class="about-right">
+
+        <!-- Skills -->
+        <h3 class="about-heading">Skills & Expertise</h3>
+        <div class="skill-tags">
+          <span class="tag">Python</span>
+          <span class="tag">PyTorch</span>
+          <span class="tag">Machine Learning</span>
+          <span class="tag">MLOps</span>
+          <span class="tag">NLP</span>
+          <span class="tag">Computer Vision</span>
+          <span class="tag">FastAPI</span>
+          <span class="tag">Git</span>
+        </div>
+
+        <!-- Education -->
+        <h3 class="about-heading" style="margin-top: 40px;">Education</h3>
+        <div class="edu-block">
+          <h4>Master of AI</h4>
+          <p class="edu-school">Example University (2020–2022)</p>
+          <ul>
+            <li>GPA: 9.1 / 10</li>
+            <li>Final Project: Deep Learning for Image Classification</li>
+          </ul>
+        </div>
+
+        <div class="edu-block">
+          <h4>Bachelor of Computer Science</h4>
+          <p class="edu-school">Example Institute (2016–2020)</p>
+          <ul>
+            <li>GPA: 8.7 / 10</li>
+            <li>Worked on OpenCV, NLP, and competitive programming</li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section">
+    <h2 class="section-title">Get In Touch</h2>
+    <p class="section-subtitle">Have a question or want to work together? Feel free to reach out!</p>
+
+    <div class="contact-card">
+      <h3>Contact Information</h3>
+      <div class="contact-row">
+        <div class="icon-circle icon-mail"></div>
+        <div class="contact-info">
+          <h4>Email</h4>
+          <a href="mailto:rajatgupta116@gmail.com">your.email@example.com</a>
+        </div>
+      </div>
+      <div class="contact-row">
+        <div class="icon-circle icon-location"></div>
+        <div class="contact-info">
+          <h4>Location</h4>
+          <p>Remote / Geneva, Switzerland</p>
+        </div>
+      </div>
+      <hr />
+      <h4>Connect with me</h4>
+      <div class="social-icons">
+        <a href="https://linkedin.com/in/dr-rajat-gupta-a4a77391" target="_blank" class="social-btn linkedin-icon"></a>
+        <a href="https://github.com/rajat116" target="_blank" class="social-btn github-icon"></a>
+        <a href="https://t.me/rajat1161" target="_blank" class="social-btn telegram-icon"></a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer class="footer">
+    <h2><span class="gradient-text">Rajat Gupta</span></h2>
+    <div class="footer-nav">
+      <a href="#">Home</a>
+      <a href="#projects">Projects</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </div>
+    <div class="social-icons">
+      <a href="https://linkedin.com/in/dr-rajat-gupta-a4a77391" target="_blank" class="social-btn linkedin-icon"></a>
+      <a href="https://github.com/rajat116" target="_blank" class="social-btn github-icon"></a>
+      <a href="https://t.me/rajat1161" target="_blank" class="social-btn telegram-icon"></a>
+    </div>
+    <p>&copy; 2025 Rajat Gupta. All rights reserved.<br />Data Scientist & Researcher</p>
   </footer>
 
   <script src="script.js"></script>
+    <!-- AOS Scroll Animation -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 800,
+      once: true
+    });
+  </script>
 </body>
 </html>
