--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 <body>
   <nav class="navbar">
     <div class="logo">RG</div>
+
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
     <div class="nav-links">
       <a href="#" class="nav-home">Home</a>
-      <a href="#projects">Projects</a>
+      <a href="projects.html">Projects</a>
       <a href="#about">About</a> 
       <a href="assets/resume.pdf" target="_blank">Resume</a>
       <a href="#contact">Contact</a>
