--- a/project-github-anomaly.html
+++ b/project-github-anomaly.html
@@ -21,6 +21,7 @@
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="projects.html" class="nav-home">Projects</a>
+      <a href="index.html#about">About</a>
       <a href="assets/resume.pdf" target="_blank">Resume</a>
       <a href="index.html#contact">Contact</a>
     </div>
