--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="nav-links">
       <a href="#" class="nav-home">Home</a>
-      <a href="projects.html">Projects</a>
+      <a href="#featured-projects">Projects</a>
       <a href="#about">About</a> 
       <a href="assets/resume.pdf" target="_blank">Resume</a>
       <a href="#contact">Contact</a>
