--- a/project-github-anomaly.html
+++ b/project-github-anomaly.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar">
-    <div class="logo">RG</div>
+    <a href="index.html" class="logo">RG</a>
 
     <div class="menu-toggle" id="menu-toggle">
       <span></span>
