--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo">RG</div>
+    <a href="index.html" class="logo">RG</a>
 
     <div class="menu-toggle" id="menu-toggle">
       <span></span>
