--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="icon-circle icon-mail"></div>
         <div class="contact-info">
           <h4>Email</h4>
-          <a href="mailto:rajatgupta116@gmail.com">your.email@example.com</a>
+          <a href="mailto:rajatgupta116@gmail.com">rajatgupta116@gmail.com</a>
         </div>
       </div>
       <div class="contact-row">
