--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <div class="about-left">
         <h3 class="about-heading">My Journey</h3>
         <p>
-          From my early days as a Computer Engineering student to a curious ML engineer, I’ve always been driven by a passion for solving real-world problems through technology.
+          I began my academic journey in Physics, completing my undergraduate and master’s degrees before earning a PhD in Particle Physics, where I conducted research at some of the world’s leading laboratories including CERN. My work involved analyzing large-scale experimental data, designing real-time algorithms, and applying machine learning techniques to uncover subtle patterns in complex environments.
         </p>
         <p>
-          I've worked on everything from image recognition to real-time system monitoring, and I continue learning and building with tools that push the boundaries of what AI can do.
+          During my postdoctoral research at the University of Pittsburgh and CERN, I deepened my expertise in scientific computing and AI-driven workflows. This evolved into a broader focus on data science and machine learning engineering, where I now specialize in building robust, end-to-end systems — from data ingestion to modeling and deployment — grounded in strong analytical thinking and driven by real-world impact.
         </p>
       </div>
 
@@ -82,34 +82,41 @@
         <h3 class="about-heading">Skills & Expertise</h3>
         <div class="skill-tags">
           <span class="tag">Python</span>
-          <span class="tag">PyTorch</span>
           <span class="tag">Machine Learning</span>
+          <span class="tag">Deep Learning</span>
           <span class="tag">MLOps</span>
-          <span class="tag">NLP</span>
-          <span class="tag">Computer Vision</span>
+          <span class="tag">Data Analysis</span>
+          <span class="tag">PyTorch</span>
+          <span class="tag">TensorFlow</span>
+          <span class="tag">Scikit-learn</span>
+          <span class="tag">SQL</span>
           <span class="tag">FastAPI</span>
+          <span class="tag">Docker</span>
           <span class="tag">Git</span>
         </div>
 
         <!-- Education -->
-        <h3 class="about-heading" style="margin-top: 40px;">Education</h3>
+        <h3 class="about-heading" style="margin-top: 40px;">Education & Experience</h3>
         <div class="edu-block">
-          <h4>Master of AI</h4>
-          <p class="edu-school">Example University (2020–2022)</p>
+          <h4>Data Scientist [2022 - Present]</h4>
+          <p class="edu-school">ATLAS@LHC (CERN and University of Pittsburgh)</p>
           <ul>
-            <li>GPA: 9.1 / 10</li>
-            <li>Final Project: Deep Learning for Image Classification</li>
+            <li>Leading ML-based anomaly detection research at the ATLAS experiment</li>
+            <li>Developing model compression workflows for real-time and hardware deployment</li>
+            <li>Collaborating with hardware teams to optimize ML inference for FPGA systems</li>
           </ul>
         </div>
 
         <div class="edu-block">
-          <h4>Bachelor of Computer Science</h4>
-          <p class="edu-school">Example Institute (2016–2020)</p>
+          <h4>Data Analyst (Ph.D. in Particle Physics) [2016-2022]</h4>
+          <p class="edu-school">CMS@LHC (CERN and Panjab University)</p>
           <ul>
-            <li>GPA: 8.7 / 10</li>
-            <li>Worked on OpenCV, NLP, and competitive programming</li>
+            <li>Analyzed large-scale experimental datasets to extract structured patterns and validate data-driven hypotheses.</li>
+            <li>Coordinated multi-year projects involving data quality checks, statistical comparisons, and reporting of key metrics.</li>
+            <li>Co-authored multiple peer-reviewed publications; led communication and documentation for collaborative research.</li>
           </ul>
         </div>
+
 
       </div>
     </div>
