Added OverPrompt project

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
           <p>Real-time anomaly detection system using Airflow, MLflow, and Streamlit.</p>
         </div>
       </a>
+
+      <a href="project-overprompt.html" class="project-card" data-aos="fade-up">
+        <img src="assets/overprompt-banner.png" alt="OverPrompt - IPL LLM Analytics" />
+        <div class="project-info">
+          <span class="tag">LLM</span>
+          <h4>OverPrompt – IPL Analytics & Chat Agent</h4>
+          <p>LLM-powered IPL analytics assistant grounded in ball-by-ball match data.</p>
+        </div>
+      </a>
     </div>
 
     <a href="projects.html" class="btn-outline view-all">View All Projects →</a>
