--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
           <p>LLM-powered IPL analytics assistant grounded in ball-by-ball match data.</p>
         </div>
       </a>
+      
+      <a href="project-credit-risk.html" class="project-card" data-aos="fade-up">
+        <img src="assets/credit-risk-banner.png" alt="Credit Risk Scoring Project" />
+        <div class="project-info">
+          <span class="tag">Machine Learning</span>
+          <h4>Credit Risk & Behaviour Scoring</h4>
+          <p>End-to-end PD, LGD, Expected Loss, Segmentation & Anomaly Detection with FastAPI + Streamlit.</p>
+        </div>
+      </a>
     </div>
 
     <a href="projects.html" class="btn-outline view-all">View All Projects →</a>
