Updated About Me

--- a/index.html
+++ b/index.html
@@ -86,10 +86,13 @@
       <div class="about-left">
         <h3 class="about-heading">My Journey</h3>
         <p>
-          I began my academic journey in Physics, completing my undergraduate and master’s degrees before earning a PhD in Particle Physics, where I conducted research at some of the world’s leading laboratories including CERN. My work involved analyzing large-scale experimental data, designing real-time algorithms, and applying machine learning techniques to uncover subtle patterns in complex environments.
+          I’m a Data Scientist & ML Engineer with end-to-end experience building production-ready machine learning systems for risk modelling, anomaly detection, and high-frequency data pipelines. My background at CERN has trained me to work with large, complex datasets and deliver models that are fast, reliable, and explainable.
         </p>
         <p>
-          During my postdoctoral research at the University of Pittsburgh and CERN, I deepened my expertise in scientific computing and AI-driven workflows. This evolved into a broader focus on data science and machine learning engineering, where I now specialize in building robust, end-to-end systems — from data ingestion to modeling and deployment — grounded in strong analytical thinking and driven by real-world impact.
+          I enjoy working on the full lifecycle — from data engineering and feature design to model training, deployment, and monitoring. Recently, I’ve built an end-to-end anomaly detection pipeline on GitHub event streams (Airflow + MLflow + Docker + AWS), a real-time credit risk scoring system (FastAPI + XGBoost + SHAP), and a vector-search powered analytics assistant using Qdrant and Sentence-Transformers.
+        </p>
+        <p>
+          I’m comfortable collaborating with cross-functional teams, turning ambiguous problems into measurable outcomes, and deploying models that work in both batch and low-latency environments. Open to Data Scientist, ML Engineer, and ML Ops–oriented roles in Europe or remote.
         </p>
       </div>
 
