--- a/index.html
+++ b/index.html
@@ -102,18 +102,55 @@
         <!-- Skills -->
         <h3 class="about-heading">Skills & Expertise</h3>
         <div class="skill-tags">
+          <!-- Programming & Tools -->
           <span class="tag">Python</span>
-          <span class="tag">Machine Learning</span>
-          <span class="tag">Deep Learning</span>
-          <span class="tag">MLOps</span>
-          <span class="tag">Data Analysis</span>
+          <span class="tag">SQL</span>
+          <span class="tag">Pandas</span>
+          <span class="tag">NumPy</span>
+          <span class="tag">Polars</span>
+          <span class="tag">DuckDB</span>
+          <span class="tag">Bash</span>
+
+          <!-- Machine Learning -->
+          <span class="tag">XGBoost</span>
+          <span class="tag">LightGBM</span>
+          <span class="tag">CatBoost</span>
+          <span class="tag">Scikit-learn</span>
+          <span class="tag">Feature Engineering</span>
+          <span class="tag">Time-Series Forecasting (ARIMA, Prophet)</span>
+          <span class="tag">Anomaly Detection</span>
+          <span class="tag">Model Explainability (SHAP)</span>
+          <span class="tag">A/B Testing</span>
+
+          <!-- Deep Learning & LLMs -->
           <span class="tag">PyTorch</span>
           <span class="tag">TensorFlow</span>
-          <span class="tag">Scikit-learn</span>
-          <span class="tag">SQL</span>
-          <span class="tag">FastAPI</span>
+          <span class="tag">Keras</span>
+          <span class="tag">CNNs</span>
+          <span class="tag">VAEs</span>
+          <span class="tag">Generative Models</span>
+          <span class="tag">Sentence-Transformers</span>
+          <span class="tag">Vector Search (Qdrant)</span>
+          <span class="tag">RAG Pipelines</span>
+
+          <!-- MLOps & Deployment -->
+          <span class="tag">Airflow</span>
+          <span class="tag">MLflow</span>
           <span class="tag">Docker</span>
-          <span class="tag">Git</span>
+          <span class="tag">FastAPI</span>
+          <span class="tag">GitHub Actions (CI/CD)</span>
+          <span class="tag">Monitoring & Drift Detection (Evidently)</span>
+
+          <!-- Cloud -->
+          <span class="tag">AWS (S3, EC2)</span>
+          <span class="tag">Terraform</span>
+
+          <!-- Data Engineering -->
+          <span class="tag">Parquet</span>
+          <span class="tag">ETL Pipelines</span>
+          <span class="tag">Data Validation</span>
+          <span class="tag">Statistical Testing</span>
+          <span class="tag">Performance Optimization</span>
         </div>
 
         <!-- Education -->
