--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
           <h4>Data Scientist [2022 - Present]</h4>
           <p class="edu-school">ATLAS@LHC (CERN and University of Pittsburgh)</p>
           <ul>
-            <li>Leading ML-based anomaly detection research at the ATLAS experiment</li>
-            <li>Developing model compression workflows for real-time and hardware deployment</li>
-            <li>Collaborating with hardware teams to optimize ML inference for FPGA systems</li>
+            <li>Designed and deployed ML models for anomaly detection and real-time classification on 1B+ high-frequency events, building end-to-end pipelines for feature engineering, training, optimisation, and validation.</li>
+            <li>Built model-distillation workflows and co-developed low-latency ML models with engineers for hardware-constrained environments, reducing inference latency to sub-3 μs.</li>
+            <li>Developed scalable data pipelines and automated analysis workflows, improving model throughput and reducing manual effort for the team. Created data-driven compression solutions using tree models and autoencoders, improving storage & retrieval efficiency for high-throughput pipelines.</li>
           </ul>
         </div>
 
@@ -169,9 +169,9 @@
           <h4>Data Analyst (Ph.D. in Particle Physics) [2016-2022]</h4>
           <p class="edu-school">CMS@LHC (CERN and Panjab University)</p>
           <ul>
-            <li>Analyzed large-scale experimental datasets to extract structured patterns and validate data-driven hypotheses.</li>
-            <li>Coordinated multi-year projects involving data quality checks, statistical comparisons, and reporting of key metrics.</li>
-            <li>Co-authored multiple peer-reviewed publications; led communication and documentation for collaborative research.</li>
+            <li>Processed and analysed large-scale structured event data to identify patterns, anomalies, and key performance signals using statistical modelling and Python- based analytics.</li>
+            <li>Built reproducible data pipelines for cleaning, validation, and feature extraction across multi-TB datasets, improving team throughput and analysis reliability.</li>
+            <li>Collaborated with physicists, engineers, and analysts to translate findings into clear insights adopted in workflow improvements.</li>
           </ul>
         </div>
 
