--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,18 @@
           <p>End-to-end PD/LGD modeling, behavioural segmentation, anomaly detection, and FastAPI deployment.</p>
         </div>
       </a>
+      <a href="project-yolo-robotics.html" class="project-card" data-aos="fade-up">
+        <img src="assets/robotics-banner.png" alt="YOLO Distillation Robotics Project" />
+        <div class="project-info">
+          <span class="tag">MLOps · Computer Vision</span>
+          <h4>Robotics Object Detection with YOLO Distillation</h4>
+          <p>
+            Fully productionized YOLO pipeline with knowledge distillation, AWS-backed
+            training, MLflow model registry, Airflow retraining, drift detection,
+            benchmarking, and real-time FastAPI inference.
+          </p>
+        </div>
+      </a>
     </div>
   </main>
 
